--- a/RMGService/MonitoringApp/index.html
+++ b/RMGService/MonitoringApp/index.html
@@ -18,26 +18,15 @@
    <nav id="myNavbar" class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarCollapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
+      <div class="navbar-header">               
         <a class="navbar-brand" href="#">Monitoring APP</a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">DashBoard</a></li>                   
-        <li class="active"><a href="#">Contact US</a></li>
-      </ul>
-     <form role="search" class="navbar-form navbar-left">
-       <div class="form-group">
-         <input type="text" placeholder="Search" class="form-control">
-       </div>
-     </form>
+        <li class="active"><a href="#"></a></li>                   
+        <li class="active"><a href="#"></a></li>
+      </ul>     
      <ul class="nav navbar-nav navbar-right">
        <li class="active"><a href="#">Profile</a></li>
      </ul>
@@ -45,7 +34,7 @@
   </div>
 </nav>
 <div class="container">
-  <app-monitor>Loading...</app-monitor>
+  <app-login>Loading...</app-login>
 </div>
 <hr>
 <div class="row">
