--- a/RMGService/MonitoringApp/src/app.html
+++ b/RMGService/MonitoringApp/src/app.html
@@ -1,3 +1,44 @@
-<div class="container">  
-  <router-outlet></router-outlet>
+<!-- Navigation -->
+<nav  id="myNavbar" class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand">Monitoring App</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Dashboard</a></li>           
+            <li class="dropdown"> 
+              <a>                        
+                <select class="form-control input-sm"  type="string" [(ngModel)]="param" (ngModelChange)="changeInSelect()">
+                 <option  *ngFor="let master of masterData" value= {{master.name}}>
+                  {{master.id}}
+                 </option>
+               </select>
+               </a> 
+            </li>            
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Logout</a></li>
+          </ul>
+        </div>       
+      </div>
+    </nav>
+<br/>
+<br/>
+<!-- Page Content -->
+<div class="container">
+    <router-outlet></router-outlet>
 </div>
+<footer class="navbar navbar-fixed-bottom">
+    <div class="text-center">
+        <h5 class="white">           
+            <i>&copy; Copyright 2017 Capgemini India Pvt. Ltd.</i>
+        </h5>
+    </div>
+</footer>
