Added Timer Component

--- a/RMGService/MonitoringApp/src/app.html
+++ b/RMGService/MonitoringApp/src/app.html
@@ -21,7 +21,10 @@
                  </option>
                </select>
                </a> 
-            </li>            
+            </li>
+            <li class="active">
+            <a href=""><timer></timer></a>
+            </li>             
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Logout</a></li>
