--- a/RMGService/MonitoringApp/index.html
+++ b/RMGService/MonitoringApp/index.html
@@ -15,7 +15,7 @@
 </head>
 <body> 
 <div class="container">
-  <app-login>Loading...</app-login>
+  <rmg-home>Loading...</rmg-home>
 </div> 
   <script src="/dist/common.js"></script>
   <script src="/dist/vendor.js"></script> 
